--- a/src/components/organisms/mobileHeader.module.scss
+++ b/src/components/organisms/mobileHeader.module.scss
@@ -33,7 +33,7 @@
 
 .subnav {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: space-between;
     align-items: center;
     position: relative;
