--- a/src/containers/discover.module.scss
+++ b/src/containers/discover.module.scss
@@ -8,6 +8,11 @@
 	margin-bottom: 0;
 }
 
+.section>h5 {
+	display: flex;
+	justify-content: space-between;
+}
+
 .sectionCarousel {
 	display: flex;
 }
