move left implementation detail into css

--- a/src/containers/discover.slider.module.scss
+++ b/src/containers/discover.slider.module.scss
@@ -26,6 +26,7 @@
 .track {
     display: flex;
     transition: left $transition-medium ease-in-out;
+    left: var(--left);
     position: relative;
 }
 
