--- a/src/containers/discover.slider.module.scss
+++ b/src/containers/discover.slider.module.scss
@@ -25,8 +25,8 @@
 
 .track {
     display: flex;
-    transition: left $transition-medium ease-in-out;
-    left: var(--left);
+    transition: transform $transition-medium ease-in-out;
+    transform: translateX(var(--left));
     position: relative;
 }
 
