--- a/src/containers/discover.slider.module.scss
+++ b/src/containers/discover.slider.module.scss
@@ -35,9 +35,9 @@
 }
 
 .page {
-    flex-shrink: 0;
-    flex-grow: 0;
-    width: 100%;
+    // flex-shrink: 0;
+    // flex-grow: 0;
+    // width: 100%;
     padding: $grid-gap;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--min-card-width), 1fr));
