fix slide styling

--- a/src/containers/discover.slider.module.scss
+++ b/src/containers/discover.slider.module.scss
@@ -42,6 +42,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--min-card-width), 1fr));
     grid-gap: $grid-gap;
+    height: 100%;
 }
 
 .page>* {
