--- a/src/containers/discover/index.slider.module.scss
+++ b/src/containers/discover/index.slider.module.scss
@@ -5,14 +5,20 @@
     --arrow-size: 24px;
     --arrow-padding: 6px;
     --slide-padding: 24px;
+    --max-outset: min(var(--content-padding-left), var(--content-padding-right));
     --arrow-margin: calc(var(--arrow-margin-visual) - var(--slide-padding));
     --arrow-full-width: calc(var(--arrow-size) + var(--arrow-margin) + var(--arrow-padding) * 2);
-    --slider-full-width: calc(100% + var(--arrow-full-width) * 2 + var(--slide-padding) * 2);
+    --arrow-outset: min(var(--max-outset) - var(--arrow-full-width), var(--arrow-full-width));
+    --slider-full-width: calc(100% + var(--arrow-outset) * 2 + var(--slide-padding) * 2);
 
+    overflow: visible;
+}
+
+.inner {
     display: flex;
     width: var(--slider-full-width);
     position: relative;
-    left: calc(-1 * (var(--arrow-full-width) + var(--slide-padding)));
+    left: calc(-1 * (var(--arrow-outset) + var(--slide-padding)));
 }
 
 .arrow {
