--- a/src/containers/topic/detail.module.scss
+++ b/src/containers/topic/detail.module.scss
@@ -17,9 +17,18 @@
 	font-size: 16px;
 }
 
+.row {
+	display: flex;
+	align-items: center;
+	margin-bottom: -4px;
+
+	>*:first-child {
+		flex-grow: 1;
+	}
+}
+
 .duration {
 	margin-top: 3.5px;
-	margin-bottom: 18px;
 }
 
 .grid {
