--- a/src/components/organisms/cardSlider/index.module.scss
+++ b/src/components/organisms/cardSlider/index.module.scss
@@ -12,13 +12,21 @@
 	@media (min-width: $breakpoint-lg) {
 		--arrow-padding: 6px;
 		--arrow-margin-visual: 16px;
-		--max-outset: min(var(--content-padding-left),
-				var(--content-padding-right));
+		--max-outset: min(
+			var(--content-padding-left),
+			var(--content-padding-right)
+		);
 		--arrow-margin: calc(var(--arrow-margin-visual) - var(--slide-padding));
-		--arrow-full-width: calc(var(--arrow-size) + var(--arrow-margin) + var(--arrow-padding) * 2);
-		--arrow-outset: min(var(--max-outset) - var(--arrow-full-width),
-				var(--arrow-full-width));
-		--slider-full-width: calc(100% + var(--arrow-outset) * 2 + var(--slide-padding) * 2);
+		--arrow-full-width: calc(
+			var(--arrow-size) + var(--arrow-margin) + var(--arrow-padding) * 2
+		);
+		--arrow-outset: min(
+			var(--max-outset) - var(--arrow-full-width),
+			var(--arrow-full-width)
+		);
+		--slider-full-width: calc(
+			100% + var(--arrow-outset) * 2 + var(--slide-padding) * 2
+		);
 		--slide-shift: calc(-1 * (var(--arrow-outset) + var(--slide-padding)));
 	}
 
@@ -96,7 +104,7 @@
 	width: 100%;
 }
 
-.base swiper-slide>* {
+.base swiper-slide > * {
 	width: 100%;
 	max-width: 500px;
 	margin-left: auto;
