topic card tweaks

--- a/src/components/molecules/card/base/withCardTheme.module.scss
+++ b/src/components/molecules/card/base/withCardTheme.module.scss
@@ -73,7 +73,7 @@
 	--hatBg: #{$ts-topicH};
 	--hatColor: #{$ts-white};
 	--hatHoverColor: #{$ts-darkened-topicH};
-	--cardBg: #{$ts-topicB};
+	--cardBg: #{$ts-topicH};
 	--cardColor: #{$ts-lightTone};
 	--cardHoverColor: #{$ts-darkened-topicB};
 	--headingColor: #{$ts-white};
