fix scss import

--- a/src/containers/home.section.module.scss
+++ b/src/containers/home.section.module.scss
@@ -1,4 +1,4 @@
-@import '../../styles/common';
+@import '../styles/common';
 
 .base {
 	display: flex;
@@ -8,12 +8,13 @@
 	border-radius: 16px;
 
 	&:not(.center) {
-		.media + .content {
+		.media+.content {
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
 			justify-content: center;
 			margin: 16px;
+
 			@media (min-width: $breakpoint-xl) {
 				margin: 48px;
 			}
@@ -31,7 +32,7 @@
 	position: relative;
 	display: flex;
 
-	& > img {
+	&>img {
 		object-fit: cover;
 		width: 100%;
 		height: 100%;
@@ -40,6 +41,7 @@
 
 	@media (min-width: $breakpoint-md) {
 		grid-area: media;
+
 		.tall & {
 			height: 100%;
 		}
@@ -48,8 +50,9 @@
 
 .base:not(.short) .media {
 	aspect-ratio: 1/1;
+
 	@supports not (aspect-ratio: 1 / 1) {
-		> * {
+		>* {
 			height: 0 !important;
 			padding-top: 100% !important;
 		}
@@ -66,12 +69,14 @@
 		grid-area: content;
 		min-width: 0;
 	}
+
 	@media (min-width: $breakpoint-lg) and (max-width: #{$breakpoint-xl - 1px}) {
 		h1 {
 			margin-bottom: 8px;
 			font-size: 33px;
 		}
 	}
+
 	@media (min-width: $breakpoint-lg) {
 		p {
 			font-size: 18px;
@@ -95,7 +100,7 @@
 		'. content .'
 		'. . .';
 
-	& > * {
+	&>* {
 		&:last-child {
 			padding-bottom: 0;
 		}
@@ -108,12 +113,14 @@
 			'. . . .'
 			'. media content .'
 			'. . . .';
+
 		&.bleed {
 			grid-template-areas:
 				'media media . .'
 				'media media content .'
 				'media media . .';
 		}
+
 		&.center {
 			grid-template-areas:
 				'. . .'
@@ -121,6 +128,7 @@
 				'. media .'
 				'. . .';
 		}
+
 		&.center.bleed {
 			grid-template-areas:
 				'. . .'
