prune collections styles

--- a/src/containers/discover/collections.module.scss
+++ b/src/containers/discover/collections.module.scss
@@ -1,10 +1,5 @@
 @import '../../styles/common';
 
-.featured,
-.seeAllButton {
+.featured {
 	margin-bottom: 48px;
-}
-
-.cardGroup {
-	margin-bottom: 16px;
 }
