--- a/src/components/molecules/card/person.module.scss
+++ b/src/components/molecules/card/person.module.scss
@@ -1,6 +1,28 @@
 @import '../../../styles/common';
 
 $container-padding: 16px;
+$like-icon-size: 32px;
+$like-icon-padding: 8px;
+
+.compact {
+	.stretch {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+
+	.title {
+		flex-direction: column;
+		font-size: 14px;
+		margin-bottom: 0;
+
+		.image {
+			margin-bottom: 10px;
+			margin-right: 0;
+		}
+	}
+}
+
 .container {
 	display: flex;
 	flex-direction: column;
@@ -9,10 +31,12 @@ $container-padding: 16px;
 	overflow: hidden;
 	background-color: $ts-smartPlaylistH;
 	transition-duration: $transition-medium;
+
 	&,
 	&:hover {
 		color: $ts-dark;
 	}
+
 	&:hover {
 		background-color: $ts-darkened-smartPlaylistH;
 	}
@@ -33,15 +57,15 @@ $container-padding: 16px;
 	margin-right: 8px;
 }
 
-$like-icon-size: 32px;
-$like-icon-padding: 8px;
 .details {
 	display: flex;
 	align-items: center;
 	margin-top: 4px;
+
 	@media (any-pointer: fine) {
 		margin-right: #{$like-icon-size + $like-icon-padding};
 	}
+
 	&.detailsWithLike {
 		margin-right: #{$like-icon-size + $like-icon-padding};
 	}
@@ -56,12 +80,15 @@ $like-icon-padding: 8px;
 	position: absolute;
 	bottom: $container-padding;
 	right: $container-padding;
+
 	@media (any-pointer: fine) {
 		display: inherit;
 	}
+
 	@media (pointer: coarse) {
 		pointer-events: none;
 	}
+
 	&Active {
 		display: inherit;
 	}
