--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,7 @@
 $serif: ivyjournal, serif;
 
 // T&S Named Colors
+$ts-egw: #3d1212;
 $ts-white: #ffffff;
 $ts-bibleB: #f1f2f4;
 $ts-bibleH: #000000;
@@ -27,6 +28,7 @@ $ts-bufferTone: #a5afb8;
 
 $ts-cccccc: #cccccc;
 
+$ts-darkened-egw: #2c0d0d;
 $ts-darkened-white: #f8f8f8;
 $ts-darkened-bibleB: #e4e7ea;
 $ts-darkened-bibleH: #292929;
