--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,7 +1,7 @@
 $serif: ivyjournal, serif;
 
 // T&S Named Colors
-$ts-egw: #3d1212;
+$ts-egw: #3d1212; //egw
 $ts-white: #ffffff;
 $ts-bibleB: #f1f2f4;
 $ts-bibleH: #000000;
