--- a/src/components/molecules/buttonGuest.module.scss
+++ b/src/components/molecules/buttonGuest.module.scss
@@ -9,7 +9,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 0;
+	margin-left: 0;
 	padding: 0;
 	background: none;
 	border: none;
