--- a/src/components/templates/andOnboarding.module.scss
+++ b/src/components/templates/andOnboarding.module.scss
@@ -27,7 +27,15 @@
 	text-align: center;
 	margin-bottom: 32px;
 }
-
+.whySignUp {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding-left: 20%;
+}
+.guest {
+	margin-left: 10%;
+}
 .intro {
 	font-size: 18px;
 	line-height: 21.78px;
