--- a/src/components/templates/andOnboarding.module.scss
+++ b/src/components/templates/andOnboarding.module.scss
@@ -21,20 +21,21 @@
 	display: flex;
 	flex-direction: column;
 }
-
+.logo{
+	margin-left: 40px;
+}
 .logo,
 .intro {
 	text-align: center;
 	margin-bottom: 32px;
 }
+
 .whySignUp {
 	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding-left: 20%;
+	flex-direction: column;
 }
 .guest {
-	margin-left: 10%;
+	margin-top: 10px;
 }
 .intro {
 	font-size: 18px;
@@ -93,5 +94,18 @@
 		> * {
 			flex-grow: 1;
 		}
+	}
+
+	.whySignUp {
+		
+		flex-direction: row;
+		align-items: center;
+		margin: auto;
+		margin-left: 20%;
+		margin-bottom: 20px;
+	}
+	.guest {
+		margin-left:40px;
+		float: right;
 	}
 }
