--- a/src/components/molecules/socialLogin.module.scss
+++ b/src/components/molecules/socialLogin.module.scss
@@ -6,6 +6,7 @@
 		flex: 0 1 calc(50% - 16px);
 	}
 }
+.buttonColLanding,
 .buttonCol {
 	display: flex;
 	flex-direction: column;
@@ -17,6 +18,7 @@
 		margin-left: 16px;
 	}
 }
+
 .centerText {
 	justify-content: center;
 }
