updated login bug

--- a/src/components/molecules/socialLogin.module.scss
+++ b/src/components/molecules/socialLogin.module.scss
@@ -18,9 +18,20 @@
 		margin-left: 16px;
 	}
 }
+.buttonColLanding {
+	> * {
+		margin-left: 0px;
+	}
+}
 
 .centerText {
 	justify-content: center;
+}
+.centerTxt {
+	text-align: center;
+}
+.colorGreen {
+	color: green;
 }
 .loginText {
 	padding: 4px;
