Newsletter Form Updates
1. Added new verbiage to the Newsletter form
2. added two checkboxes: newsLetter and Weekly pics
3. integrated to Active Campaign

--- a/src/components/molecules/form/checkbox.module.scss
+++ b/src/components/molecules/form/checkbox.module.scss
@@ -14,8 +14,9 @@
 	border: 2px solid $ts-cream;
 	border-radius: 4px;
 	margin-right: 8px;
+
 	&:checked:after {
-		content: url('/img/icon-success.svg');
+		content: url('/img/icons/icon-success.svg');
 		font-size: 14px;
 		position: absolute;
 		top: -2px;
