--- a/src/components/organisms/navigation.module.scss
+++ b/src/components/organisms/navigation.module.scss
@@ -54,6 +54,7 @@
 	}
 
 	.navLink:hover {
+
 		&,
 		.icon {
 			color: $ts-red;
@@ -62,12 +63,19 @@
 
 	@media (min-width: $breakpoint-lg) {
 		.navLink.active {
+
 			&,
 			.icon,
 			.iconDisclosure {
 				color: $ts-red;
 			}
 		}
+	}
+}
+
+.exitButton {
+	&:hover:global(.hover-bg--darkened-cream) {
+		background-color: transparent;
 	}
 }
 
@@ -110,7 +118,7 @@
 .mobileSearch {
 	margin-bottom: 0;
 
-	> div {
+	>div {
 		flex-grow: 1;
 	}
 }
@@ -138,7 +146,7 @@
 	display: flex;
 	width: 100%;
 
-	> * {
+	>* {
 		flex: 0 0 100%;
 		display: flex;
 		flex-direction: column;
@@ -210,7 +218,7 @@
 	margin-bottom: 24px;
 	color: $ts-midTone;
 
-	> svg {
+	>svg {
 		transform: rotate(90deg);
 		margin-right: 4px;
 	}
@@ -244,6 +252,7 @@
 }
 
 @media (min-width: $breakpoint-lg) {
+
 	.mobileHeader,
 	.mobileRow {
 		display: none;
@@ -254,7 +263,7 @@
 		overflow: hidden;
 	}
 
-	.sliderColumns > * {
+	.sliderColumns>* {
 		padding-top: 0;
 		padding-left: 32px;
 		padding-right: 22px;
