create playlist add and remove items

--- a/src/components/organisms/modal.module.scss
+++ b/src/components/organisms/modal.module.scss
@@ -49,3 +49,16 @@
 .centerText {
 	text-align: center;
 }
+.leftText {
+	float: left;
+	color: #ff224a;
+	text-transform: uppercase;
+	letter-spacing: 0.1em;
+}
+.link {
+	float: right;
+}
+.head {
+	margin-bottom: 10px;
+	padding: 10px;
+}
