--- a/src/components/organisms/modal.module.scss
+++ b/src/components/organisms/modal.module.scss
@@ -8,8 +8,8 @@
 .modal {
 	position: absolute;
 	left: 50%;
-	top: 80px;
-	transform: translate(-50%, 0%);
+	top: 50%;
+	transform: translate(-50%, -50%);
 	width: 500px;
 	max-width: calc(100% - 48px);
 	outline: none;
@@ -60,5 +60,5 @@
 }
 .head {
 	margin-bottom: 10px;
-	padding: 10px;
+	padding: 10px 0;
 }
