--- a/src/components/atoms/loader.module.scss
+++ b/src/components/atoms/loader.module.scss
@@ -4,7 +4,7 @@
 	}
 }
 
-.loader-wrapper {
+.loader_wrapper {
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -24,7 +24,7 @@
 	border-radius: 4px;
 }
 
-.placeholder-text {
+.placeholder_text {
 	width: 100%;
 	height: 20px;
 }
