updated add new playlist to use modal

--- a/src/components/organisms/modal.module.scss
+++ b/src/components/organisms/modal.module.scss
@@ -57,6 +57,13 @@
 }
 .link {
 	float: right;
+	text-decoration: none;
+    color: inherit;
+}
+.link:hover,
+.link:focus {
+    text-decoration: underline;
+	color: #ff224a;
 }
 .head {
 	margin-bottom: 10px;
