updated some issues 2 and edit in modal

--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -137,3 +137,20 @@ $like-icon-padding: 8px;
 		margin-bottom: 4px;
 	}
 }
+.modalLink {
+	float: right;
+	text-decoration: none;
+	color: inherit;
+	background: none;
+	border: none;
+	cursor: pointer;
+	font: inherit;
+	padding: 0;
+	height: auto;
+}
+
+.modalLink:hover,
+.modalLink:focus {
+	text-decoration: underline;
+	color: #ff224a;
+}
