--- a/src/pages/[language]/playlists/Playlistform.module.scss
+++ b/src/pages/[language]/playlists/Playlistform.module.scss
@@ -25,23 +25,30 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	float: left;
 }
 
 .privacyInputLeftLabel {
 	margin-left: 4px;
 }
 
+.privacyInputRightIcon {
+	float: right;
+	padding-top: 15px;
+}
+
 .privacyContainer {
 	margin-top: 4px;
-	border-color: $ts-red;
-	border-width: 1px;
+	border: 1px solid $ts-red;
 	border-radius: 4px;
 	padding: 16px;
+	clear: both;
 }
 
 .privacyOption {
 	display: flex;
 	flex-direction: row;
+	margin-bottom: 10px;
 }
 
 .pressed {
@@ -65,6 +72,7 @@
 	display: flex;
 	flex-direction: row;
 	margin-top: 16px;
+	clear: both;
 }
 
 .cancel {
