added load indicater when adding or removing items from the playlist

--- a/src/pages/[language]/playlists/addToPlaylist/PlaylistItem.module.css
+++ b/src/pages/[language]/playlists/addToPlaylist/PlaylistItem.module.css
@@ -27,11 +27,16 @@
 }
 
 .title {
-	font-family: var(--font-sans); /* Replace with actual font */
+	font-family: var(--font-sans);
 	font-size: 14px;
 	color: #323e48;
 }
 
 .rightIcon {
 	margin-left: 8px;
+}
+
+.loading {
+	margin-left: 8px;
+	font-size: 14px;
 }
