--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -152,5 +152,5 @@ $like-icon-padding: 8px;
 .modalLink:hover,
 .modalLink:focus {
 	text-decoration: underline;
-	color: #ff224a;
+	color: $ts-red;
 }
