--- a/src/components/organisms/modal.module.scss
+++ b/src/components/organisms/modal.module.scss
@@ -51,7 +51,7 @@
 }
 .leftText {
 	float: left;
-	color: #ff224a;
+	color: $ts-red;
 	text-transform: uppercase;
 	letter-spacing: 0.1em;
 	margin-bottom: 1px;
