--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -136,7 +136,17 @@ $like-icon-padding: 8px;
 	.heading {
 		margin-bottom: 4px;
 	}
+	.like {
+		bottom: -1px;
+	}
 }
+
 .modalLink {
 	float: right;
+}
+.rightButtons > *:not(:first-child) {
+	margin-left: 8px;
+	@media (min-width: $breakpoint-sm) {
+		margin-left: 16px;
+	}
 }
