--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -107,7 +107,7 @@ $like-icon-padding: 8px;
 	flex-grow: 1;
 }
 
-.like {
+.playlist {
 	display: none;
 	position: absolute;
 	bottom: #{$container-padding + $right-icon-offset};
@@ -141,9 +141,6 @@ $like-icon-padding: 8px;
 	}
 }
 
-.modalLink {
-	float: right;
-}
 .rightButtons > *:not(:first-child) {
 	margin-left: 8px;
 	@media (min-width: $breakpoint-sm) {
