updated playlist header font

--- a/src/components/organisms/modal.module.scss
+++ b/src/components/organisms/modal.module.scss
@@ -54,6 +54,7 @@
 	float: left;
 	color: $ts-red;
 	text-transform: uppercase;
+	font-weight: 600;
 	letter-spacing: 0.1em;
 	margin-bottom: 1px;
 }
