updated play button for tease

--- a/src/components/molecules/teaseRecording.module.scss
+++ b/src/components/molecules/teaseRecording.module.scss
@@ -102,9 +102,8 @@ $like-icon-padding: 8px;
 	}
 }
 
-.progress {
-	margin-left: 16px;
-	flex-grow: 1;
+.duration {
+	margin-left: 6px;
 }
 
 .like {
