--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -37,7 +37,7 @@ $ts-darkened-bookH: #382525;
 $ts-darkened-cream: #e8e3e3;
 $ts-darkened-lightTone: #b5c4d1;
 $ts-darkened-dark: #232b32;
-$ts-darkened-playlistB: #ffffff;
+$ts-darkened-playlistB: #f8f8f8;
 $ts-darkened-playlistH: #ffffff;
 $ts-darkened-smartPlaylistH: #e7e9ee;
 $ts-darkened-songB: #e3effa;
