--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -38,7 +38,7 @@ $ts-darkened-cream: #e8e3e3;
 $ts-darkened-lightTone: #b5c4d1;
 $ts-darkened-dark: #232b32;
 $ts-darkened-playlistB: #f8f8f8;
-$ts-darkened-playlistH: #ffffff;
+$ts-darkened-playlistH: #f8f8f8;
 $ts-darkened-smartPlaylistH: #e7e9ee;
 $ts-darkened-songB: #e3effa;
 $ts-darkened-songH: #c9def0;
