--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -214,6 +214,10 @@ a {
 		background-color: $ts-darkened-playlistH;
 	}
 
+	&.hover-bg--darkened-playlistB {
+		background-color: $ts-darkened-playlistB;
+	}
+
 	&.hover-bg--darkened-smartPlaylistH {
 		background-color: $ts-darkened-smartPlaylistH;
 	}
