--- a/src/components/molecules/buttonPlayCircle.module.scss
+++ b/src/components/molecules/buttonPlayCircle.module.scss
@@ -1,6 +1,7 @@
 @import '../../styles/common';
 $right-icon-offset: -4px;
 .play {
+	all: unset;
 	margin-top: $right-icon-offset;
 	margin-right: $right-icon-offset;
 }
