--- a/src/components/templates/andMiniplayer.module.scss
+++ b/src/components/templates/andMiniplayer.module.scss
@@ -2,7 +2,7 @@
 
 .contentWithPlayer {
 	@media (min-width: $breakpoint-lg) {
-		height: calc(100vh - $miniplayer-height)
+		height: calc(100vh - $miniplayer-height);
 	}
 }
 
